...
  );
}

function getLabel(routeName: string) {
  switch (routeName) {
    case 'SeniorManagement':
      return 'Gestão';
    case 'Requests':
      return 'Pedidos';
    case 'HomePage':
      return 'Início';
    case 'Sensors':
      return 'Sensores';
...
