appId: com.falcao2.x2.geras
---
- launchApp
- tapOn: "E-mail"
- inputText: "tomas@gmail.com"
- tapOn: "Palavra-Passe"
- inputText: "12345cuidador"
- tapOn: "return"
- tapOn: "Log In"
- tapOn: "Not Now"
- assertVisible: "Sensores"